force-app/main/default/objects/ForeCast__c/ForeCast__c.object-meta.xml
<CustomObject>
    <label>ForeCast</label>
    <nameField>
        <label>ForeCast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForeCasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>