force-app/main/default/objects/ForeCast__c/fields/Forecast_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quarter__c</fullName>
    <label>Forecast Quarter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>