force-app/main/default/objects/ForeCast__c/fields/ForeCastStage__c.field-meta.xml
<CustomField>
    <fullName>ForeCastStage__c</fullName>
    <label>ForeCastStage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>