force-app/main/default/objects/ForeCast__c/fields/ForestCast_Amount__c.field-meta.xml
<CustomField>
    <fullName>ForestCast_Amount__c</fullName>
    <label>ForestCast Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>